# pancake-scala-client

./: .gitignore  README.md  build.sbt  publish.sbt
docker/: build_rust_linux.Dockerfile
native/: Cargo.toml  build_all_from_darwin.sh  build_local_darwin.sh  cross_build_linux.sh
native/docker/: ubuntu.Dockerfile
native/src/: lib.rs
project/: plugins.sbt
scripts/: build_native_darwin_local.sh
src/main/scala/com/pancakedb/client/: AtomNester.scala  Exceptions.scala  NativeCore.scala  NativeRepLevelsColumn.scala  PancakeClient.scala  PrimitiveHandler.scala  PrimitiveHandlers.scala  RawColumn.scala  RepLevelsColumn.scala
src/test/scala/com/pancakedb/client/: AtomNesterTest.scala  IntegrationTest.scala  PrimitiveHandlerTest.scala  PrimitiveHandlersTest.scala  TestBase.scala
