[package]
name = "pancake-scala-client-native"
version = "0.0.0"
authors = ["PancakeDB <inquiries@pancakedb.com>"]
edition = "2018"
include = ["src"]

[dependencies]
jni = "0.19"
pancake-db-idl = "0.1.0"
pancake-db-core = "0.1.2"
protobuf = "=3.0.0-alpha.2"
q_compress = "0.9.0"

[lib]
crate-type = ["cdylib"]
