[package]
name = "pancake-scala-client-native"
version = "0.0.0"
authors = ["PancakeDB <inquiries@pancakedb.com>"]
edition = "2018"
include = ["src"]

[dependencies]
jni = "0.19"
pancake-db-idl = "0.2.0"
pancake-db-core = "0.2.0"
q_compress = "0.9.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
